batch-export/force-app/main/default/objects/Batch_Export__c/Batch_Export__c.object-meta.xml
<CustomObject>
    <description>Custom object to track Batch Exports</description>
    <label>Batch Export</label>
    <nameField>
        <displayFormat>EX-{00000}</displayFormat>
        <label>Export Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>