batch-export/force-app/main/default/objects/Batch_Export__c/fields/Export_Status__c.field-meta.xml
<CustomField>
    <fullName>Export_Status__c</fullName>
    <label>Export Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enqueued</fullName>
                <default>true</default>
                <label>Enqueued</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Exporting</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>