batch-export/force-app/main/default/objects/Batch_Export__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filter Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>