batch-export/force-app/main/default/objects/Batch_Export__c/fields/Has_Error__c.field-meta.xml
<CustomField>
    <fullName>Has_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Error</label>
    <type>Checkbox</type>
</CustomField>