batch-export/force-app/main/default/objects/Batch_Export__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>