batch-export/force-app/main/default/objects/Batch_Export__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>