batch-export/force-app/main/default/objects/Batch_Export__c/fields/Record_Locator__c.field-meta.xml
<CustomField>
    <fullName>Record_Locator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Locator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>