batch-export/force-app/main/default/objects/Batch_Export__c/fields/Records_Fetched__c.field-meta.xml
<CustomField>
    <fullName>Records_Fetched__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Records Fetched</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>