batch-export/force-app/main/default/objects/Batch_Export__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>