batch-export/force-app/main/default/objects/Batch_Export__c/fields/Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>Time_Mins__c</fullName>
    <formula>(TIMEVALUE(BLANKVALUE(End_Time__c,  NOW())) - TIMEVALUE(Start_Time__c))/60000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Taken (mins)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>