batch-export/force-app/main/default/objects/Batch_Export__c/fields/Time_Sec__c.field-meta.xml
<CustomField>
    <fullName>Time_Sec__c</fullName>
    <formula>(TIMEVALUE(BLANKVALUE(End_Time__c,  NOW())) - TIMEVALUE(Start_Time__c))/1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Taken (Sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>