batch-export/force-app/main/default/objects/Batch_Export__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_Object__c</columns>
    <columns>Job_Id__c</columns>
    <columns>Bulk_API_Status__c</columns>
    <columns>Export_Status__c</columns>
    <columns>Has_Error__c</columns>
    <columns>Completion__c</columns>
    <columns>Records_Fetched__c</columns>
    <columns>Records_Processed__c</columns>
    <columns>Records_Exported__c</columns>
    <columns>Time_Mins__c</columns>
    <columns>Log__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>